# pixie

scripts/: run_docker.sh
src/stirling/binaries/: BUILD.bazel  stirling_causely.cc
src/stirling/binary/: BUILD.bazel  binary.cc  binary.h  main.cc
src/stirling/bpf_tools/bcc_bpf/: task_struct_utils.h
src/stirling/core/: BUILD.bazel  output.cc
src/stirling/scripts/: stirling_causely.sh
src/stirling/source_connectors/socket_tracer/bcc_bpf/: protocol_inference.h
src/stirling/source_connectors/socket_tracer/bcc_bpf_intf/: socket_trace.h
tools/docker/user_dev_image/: Dockerfile
